force-app/base/main/default/objects/Listing_Repricing__e/Listing_Repricing__e.object-meta.xml
<CustomObject>
    <description>Published when a catalogue price actually changes. This is the seam that breaks the trigger chain.</description>
    <label>Listing Repricing</label>
    <pluralLabel>Listing Repricing</pluralLabel>
</CustomObject>