force-app/base/main/default/objects/Listing_Repricing__e/fields/Catalogue_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Item_Id__c</fullName>
    <label>Catalogue Item Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>