force-app/base/main/default/objects/Listing_Repricing__e/fields/Event_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Event_Uuid__c</fullName>
    <label>Event Uuid</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>