force-app/base/main/default/objects/Listing_Repricing__e/fields/New_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Price__c</fullName>
    <label>New Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>